<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    android:gravity="center"
    android:background="@drawable/gradient_background">

    <TextView
        android:id="@+id/textViewPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/price" />

    <EditText
        android:id="@+id/editTextCardNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_number"
        android:inputType="number"
        android:maxLength="16"/>

    <EditText
        android:id="@+id/editTextCardExpiry"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/mm_yy"
        android:inputType="number"
        android:maxLength="4"/>

    <EditText
        android:id="@+id/editTextCvv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/cvv"
        android:inputType="number"
        android:maxLength="3"/>

    <EditText
        android:id="@+id/editTextCardHolderName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_holder_name"
        android:inputType="text"/>

    <Button
        android:id="@+id/buttonPay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pay_now"
        android:layout_marginTop="20dp"/>
</LinearLayout>
